Refactor handleJPAViolations
Added if with type casting.
Refactored List<Map<String, String>>
This code handles JPA Violations.